--- a/garage-app/src/app/app.html
+++ b/garage-app/src/app/app.html
@@ -65,7 +65,7 @@
               </td>
 
               <td class="px-4 py-3">
-                {{ garage.profession || '-' }}
+                {{ garage.profession }}
               </td>
 
               <td class="px-4 py-3">
